# CG-task

./: .gitignore  CMakeLists.txt
ext/freeglut-3.0.0/: CMakeLists.txt
ext/glm/glm/: glm_dummy
src/: Camera.h  Cubemap.h  Engine.h  FBO.h  GraphicalObject.h  LightingTechnique.h  LightningTechnique.h  ReflectionTechnique.h  SSAO.h  Scene.h  Shader.h  TangentSpace.h  Texture.h  Vertex.h  Window.h  main.cpp
src/Shaders/: FragmentShader.frag  VertexShader.vert
src/Shaders/BlinnShaders/: BlinnFragment.glsl  BlinnVertex.glsl
src/Shaders/NormalMapShaders/: NormalFragment.glsl  NormalVertex.glsl
src/Shaders/Parallax/: ParallaxFragment.glsl  ParallaxVertex.glsl
src/Shaders/SSAO/BlurPass/: BlurFragment.glsl
src/Shaders/SSAO/GeometryPass/: GPassFragment.glsl  GPassVertex.glsl
src/Shaders/SSAO/SSAOPass/: SSAOPassFragment.glsl
src/Shaders/ShadowShaders/: ShadowBlinnFragment.glsl  ShadowBlinnVertex.glsl  ShadowFragment.glsl  ShadowGenFragment.glsl  ShadowGenVertex.glsl  ShadowLightFragment.glsl  ShadowLightVertex.glsl  ShadowVertex.glsl
src/Shaders/SkyboxShaders/: CubemapReflectionFragment.glsl  CubemapReflectionVertex.glsl
